deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockservice
  namespace: default
  labels:
    app: stockservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockservice
  template:
    metadata:
      labels:
        app: stockservice
    spec:
      containers:
        - name: stockservice
          image: chiaradia/stockservice:latest
          resources:
            limits:
              memory: "512M"
          ports:
            - name: web
              containerPort: 8080
